Add alert validations & add notification when booking to Checkout Domain

--- a/src/app/domains/checkout-page/checkout-page.component.css
+++ b/src/app/domains/checkout-page/checkout-page.component.css
@@ -37,78 +37,13 @@
   margin: 0.8rem 0;
 }
 
-/* ===================================================================================================
-  Booking Article
-=================================================================================================== */
-
-.booking__card {
-  position: relative;
+.total-info {
   display: flex;
-  flex-direction: row;
-  column-gap: 1rem;
-  row-gap: 1rem;
-  padding: 1rem;
-  border: 3px solid #000;
-  background-color: rgba(170, 169, 169, 0.486);
-  border-radius: 10px;
-  margin: 0 1rem;
-  margin-bottom: 1rem;
-}
-
-.booking__main-title {
-  font-size: clamp(1.4rem, 6vw, 1.5rem);
+  justify-content: space-between;
+  padding: 0 1rem;
   font-family: var(--arvo-subtitle-font);
   font-weight: 600;
-  margin: 0.8rem 0;
-  overflow: hidden;
-}
-
-.booking__icon {
-  display: none;
-  max-width: 4rem;
-}
-
-.booking__title,
-.booking__price,
-.booking__date,
-.booking__place {
-  font-size: clamp(1rem, 3vw, 1.3rem);
-  font-family: var(--source3-text-font);
-  font-weight: 600;
-  overflow: hidden;
-}
-
-.booking__date span {
-  font-weight: bolder;
-}
-
-.booking-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.booking-container {
-  row-gap: 0.2rem;
-}
-
-.booking__title {
-  width: 100%;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  margin-bottom: .5rem;
-}
-
-.booking__icon {
-  border-radius: 10px;
-  width: 100%;
-}
-
-.booking__delete {
-  position: absolute;
-  width: clamp(1.7rem, 8vw, 2.2rem);
-  cursor: pointer;
-  bottom: 10%;
-  right: 5%;
+  font-size: clamp(.8rem, 6vw, 1.3rem);
 }
 
 /* ===================================================================================================
