--- a/src/app/domains/user-settings/user-settings.component.css
+++ b/src/app/domains/user-settings/user-settings.component.css
@@ -35,7 +35,7 @@
   justify-content: center;
 }
 
-.user-options__button p{
+.user-options__button p {
   display: none;
 }
 
@@ -160,7 +160,7 @@
 }
 
 .info__value--edit {
-  padding: .5rem;
+  padding: 0.5rem;
   background-color: white;
   border: 1px solid #000000;
   border-radius: 20px;
@@ -178,7 +178,7 @@
   background-color: #000;
   color: white;
   font-weight: 600;
-  padding: .7rem 1rem;
+  padding: 0.7rem 1rem;
   border-radius: 20px;
   text-decoration: none;
   cursor: pointer;
@@ -200,7 +200,6 @@
 =================================================================================================== */
 
 @media (min-width: 768px) {
-
   .user-options,
   .bookings__main-title {
     display: none;
@@ -232,7 +231,7 @@
     width: clamp(1.5rem, 4vw, 2rem);
   }
 
-  .user-options__button p{
+  .user-options__button p {
     display: inline;
   }
 
@@ -244,5 +243,78 @@
   .profile-image__circle {
     max-width: 8rem;
     max-height: 8rem;
+  }
+}
+
+/* ===================================================================================================
+  Notification
+=================================================================================================== */
+
+.notification {
+  position: fixed;
+  width: max-content;
+  left: 0;
+  right: 0;
+  bottom: 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  background-image: url("../../../assets/img/navbar_png.png");
+  color: white;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+  transform: translateY(1.875rem);
+  opacity: 0;
+  visibility: hidden;
+  animation: fade-in 3s linear;
+  z-index: 10;
+}
+
+.notification__icon {
+  height: 1.625rem;
+  width: 1.625rem;
+  margin-right: 0.25rem;
+}
+
+.notification__body {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 1rem 0.5rem;
+}
+
+.notification__body p {
+  padding-right: 1rem;
+  padding-left: 0.5rem;
+  font-weight: bold;
+}
+
+.notification__progress {
+  position: absolute;
+  left: 0.25rem;
+  bottom: 0.25rem;
+  width: calc(100% - 0.5rem);
+  height: 0.2rem;
+  transform: scaleX(0);
+  transform-origin: left;
+  background: rgba(52, 52, 52, 0.944);
+  border-radius: 15px;
+  animation: progress 3s 0s linear;
+}
+
+@keyframes fade-in {
+  5% {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+  95% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes progress {
+  to {
+    transform: scaleX(1);
   }
 }
