--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,8 +11,8 @@
 
         <div class="navbar-buttons__desktop">
             <div class="navbar-buttons__left" [ngClass]="isloggedIn() ? 'add-lines' : ''">
-                <a class="left__links" href="#">Locations</a>
-                <a class="left__links" href="#">About Us</a>
+                <a class="left__links" >Locations</a>
+                <a class="left__links" [routerLink]="'/about-us'">About Us</a>
             </div>
 
             <div class="navbar-buttons__right">
@@ -53,14 +53,6 @@
 
 </header>
 
-<div class="notification" *ngIf="showNotification()">
-    <div class="notification__body">
-        <img src="assets/img/check-circle.svg" alt="Success" class="notification__icon">
-        <p>Logged out. Until next time!</p>
-    </div>
-    <div class="notification__progress"></div>
-</div>
-
 <aside class="cart" [ngClass]="showCart() ? 'cart show' : 'cart' ">
     <div class="cart-header">
         <h2 class="cart-header-title">Your Cart</h2>
@@ -70,6 +62,9 @@
         @for(cartExperience of cartExperiences().values(); track cartExperience._id) {
             <app-cart-experience [experience]="cartExperience" />
         }
+        <div class="cart__add-experience-button">
+            <p><span> ➕ </span> Add Experiences</p>
+        </div>
     </section>
     <div class="cart__details">
         <h3 class="cart__total">Total: <span>{{ cartTotal() | currency }}</span></h3>
