Add Mobile Navbar

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -18,9 +18,8 @@
                 <a [routerLink]= "'/'" index.html><img src="assets/img/Logo_completo_BIT_project__horizontal.svg" alt="BIT Logo"></a>
             </div>
             <div class="footer__links">
-                <a href="#" class="footer__link">About Us</a>
-                <a href="#" class="footer__link">Terms & Conditions</a>
-                <img class="footer__link--github" src="assets/img/github.svg" alt="Github logo">
+                <a [routerLink]="'/about-us'" class="footer__link">About Us</a>
+                <a href="https://github.com/JuanesPachon/web-trekangle-client" target="_blank"><img class="footer__link--github" src="assets/img/github.svg" alt="Github logo"></a>
             </div>
         </div>
     </div>
