--- a/src/app/domains/login/login.component.html
+++ b/src/app/domains/login/login.component.html
@@ -6,8 +6,8 @@
       <main class="login-form-side">
         <form class="login-form" (ngSubmit)="onSubmit($event)" [formGroup]="userForm">
           <div class="login-form-welcome-row">
-            <h1>Welcome back! &#128079;</h1>
-            <h2>Login with your account!</h2>
+            <h1 class="login-form-title">Welcome back! 👋</h1>
+            <h2 class="login-form-subtitle">Login with your account!</h2>
           </div>
 
           <div class="text-field">
