--- a/src/app/domains/signup/signup.component.html
+++ b/src/app/domains/signup/signup.component.html
@@ -6,8 +6,8 @@
             <main class="signup-form-side">
                 <form class="signup-form" (ngSubmit)="onSubmit($event)" [formGroup]="registerForm"> 
                     <div class="signup-form-welcome-row">
-                        <h1>Sign up</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                        <h1 class="signup-form-title">Sign up!!</h1>
+                        <h2 class="signup-form-subtitle"> Welcome to Trekangle, create your account to get started.</h2>
                     </div>
                     <div class="text-field">
                         <label for="name">Name</label >
