--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -20,6 +20,7 @@
   max-width: 1700px;
   height: 4rem;
   padding: 0 1rem;
+  padding-right: .5rem;
   position: relative;
 }
 
@@ -30,11 +31,14 @@
 }
 
 .navbar-buttons__logo {
-  width: 80%;
+  margin-top: .3rem;
+  width: 75%;
+
 }
 
 @media (min-width: 1024px) {
-  .navbar-buttons__mobile {
+  .navbar-buttons__mobile,
+  .mobile-navbar {
     display: none;
   }
 
@@ -280,4 +284,111 @@
   font-family: var(--arvo-subtitle-font);
   font-weight: 600;
   font-size: clamp(1.5rem, 2vw, 1.2rem);
+}
+
+/* ===================================================================================================
+  Mobile Navegation
+=================================================================================================== */
+
+@media (max-width: 1024px) {
+  
+  .mobile-navbar {
+    width: 50vw;
+    height: 95%;
+    min-width: 80%;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1.5rem;
+    padding-top: 0;
+    right: 0;
+    top: 0;
+    background-image: url("/assets/img/main_bg.png");
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    border: 3px solid black;
+    border-right: none;
+    border-top: none;
+    border-bottom-left-radius: 10px;
+    transform: translate(100%);
+    transition: transform 0.4s ease-in-out;
+    z-index: 100;
+  }
+
+  .mobile-navbar.show {
+    transform: translateX(0%);
+  } 
+
+  .mobile-navbar__header {
+    background-image: url("/assets/img/navbar_png.png");
+    position: absolute;
+    width: 100%;
+    padding: .6rem 0;
+    left: 0;
+    right: 0;
+    border-bottom: 3px solid black;
+  }
+
+  .mobile-navbar__header-logo {
+    margin-top: .1rem;
+  }
+
+  .mobile-navbar__close {
+    width: 45px;
+    position: absolute;
+    right: 20px;
+    top: 18px;
+    z-index: 2;
+    filter: drop-shadow(0 0 5px black);
+    cursor: pointer;
+  }
+
+  .mobile-navbar__checkout-button {
+    width: 95%;
+    display: block;
+    background: black;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 0.8rem;
+    margin-top: 2rem;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: var(--mochiy-title-font);
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+
+  .mobile-navbar__checkout-button:hover {
+    background: rgba(0, 0, 0, 0.857);
+  }
+
+  .mobile-navbar__links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
+    margin-top: 3rem;
+    overflow-y: auto;
+    scrollbar-color: #678d56 var(--white-bg);
+    scrollbar-arrow-color: black;
+  }
+
+  .mobile-navbar__item {
+    border-bottom: 1px solid black;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    padding: 1.5rem 1rem;
+    text-align: center;
+    font-size: clamp(.8rem, 10vw, 1.7rem);
+    font-family: var(--mochiy-title-font);
+    margin: 0;
+  }
+
+  .mobile-navbar__item--last {
+    border-bottom: none;
+  }
+
+  .mobile-navbar__item:hover {
+    background-color: rgb(218, 218, 218);
+  }
 }
