--- a/src/app/domains/login/login.component.css
+++ b/src/app/domains/login/login.component.css
@@ -1,5 +1,4 @@
   .login-component {
-    font-family: "Poppins", sans-serif;
     padding: 1rem;
     display: flex;
     justify-content: center;
@@ -61,6 +60,17 @@
   .login-form-welcome-row {
     display: flex;
     flex-direction: column;
+  }
+
+  .login-form-title {
+    font-size: clamp(1rem, 2.5vw, 2.2rem);
+    font-family: var(--mochiy-title-font);
+    margin-bottom: 1rem;
+  }
+
+  .login-form-subtitle {
+    font-size: clamp(.8rem, 1.5vw, 1.3rem);
+    font-family: var(--arvo-subtitle-font);
   }
   
   .login-form__button {
@@ -179,6 +189,9 @@
     align-items: center;
     padding: 2rem;
     border-radius: 35px;
+    border-top-left-radius: 0; 
+    border-bottom-left-radius: 0;
+    border-left: 5px solid black; 
     background: url("https://images.unsplash.com/photo-1541410965313-d53b3c16ef17?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHBhaXNhamV8ZW58MHx8MHx8fDA%3D")
       no-repeat;
     background-size: cover;
@@ -202,6 +215,7 @@
   }
   
   @media (max-width: 1024px) {
+
     .login-form-wrapper {
       grid-template-columns: 1fr;
     }
@@ -210,6 +224,10 @@
     .login-component {
       margin: 0;
       padding: 0;
+    }
+
+    .login-component__container {
+      margin-top: 5rem;
     }
   
     .login-form-side {
