--- a/src/app/domains/signup/signup.component.css
+++ b/src/app/domains/signup/signup.component.css
@@ -1,5 +1,4 @@
 .signup-component {
-    font-family: "Poppins", sans-serif;
     padding: 1rem;
     display: flex;
     justify-content: center;
@@ -55,9 +54,19 @@
     text-align: center;
   }
 
-  .signup-form-side h1 {
-    font-size: clamp(1.5rem, 2.5vw, 3rem);
+  .signup-form-title {
+    font-size: clamp(1rem, 2.5vw, 2.2rem);
+    font-family: var(--mochiy-title-font);
+    margin-bottom: 1.5rem;
   }
+
+  .signup-form-subtitle {
+    font-size: clamp(.6rem, 1vw, 1.2rem);
+    font-family: var(--arvo-subtitle-font);
+    text-align: center;
+    margin-top: 1rem;
+  }
+
   .signup-form {
     display: flex;
     flex-direction: column;
@@ -193,6 +202,9 @@
     align-items: center;
     padding: 2rem;
     border-radius: 35px;
+    border-top-left-radius: 0; 
+    border-bottom-left-radius: 0; 
+    border-left: 5px solid black; 
     background: url("https://images.unsplash.com/photo-1541410965313-d53b3c16ef17?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHBhaXNhamV8ZW58MHx8MHx8fDA%3D")
       no-repeat;
     background-size: cover;
