--- a/src/app/components/mobile-top-experience/mobile-top-experience.component.css
+++ b/src/app/components/mobile-top-experience/mobile-top-experience.component.css
@@ -4,17 +4,23 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   border: solid 2px black;
+  cursor: pointer;
+  font-family: var(--mochiy-title-font);
 }
 
 .mobile-experience__card__image {
   position: relative;
   overflow: hidden;
+  height: 100%;
+  max-height: 13rem;
 }
 
 .mobile-experience__card__image img {
   display: block;
   width: 100%;
   transition: transform 0.3s ease;
+  height: 10rem;
+  object-fit: cover;
 }
 
 .mobile-experience__card__image img:hover {
@@ -37,11 +43,8 @@
 .mobile-experience__card__price {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
-}
-
-.mobile-experience__card__address {
-  font-size: 0.875rem;
-  color: #000000;
+  color: rgb(255, 255, 255);
+  -webkit-text-stroke: 1px black;
 }
 
 .mobile-experience__card__features {
@@ -56,10 +59,14 @@
   justify-content: space-between;
 }
 
-.mobile-experience__card__icon {
-  font-size: 1.2rem;
-  margin-bottom: 0.3rem;
+.experience__card__feature:first-child {
   margin-right: 0.5rem;
+}
+
+.mobile-experience__card__icon {
+  font-size: 1.25rem;
+  margin-right: 0.5rem;
+  margin-bottom: .4rem;
 }
 
 .mobile-experience__card__text {
